@@ -684,8 +684,9 @@
 10) kerne: net: ipv4: raise tcp PMTU probe mss base size.<br>
 11) kernel: net: ipv4: ip_check_defrag should not assume that skb_network_offset is zero.<br>
 12) kernel: net: ipv4: use binary search to choose tcp PMTU probe_size.<br>
-13) kernel: net: make skb->skb_iif always track skb->dev.<br>
-14) kernel: net: remove protocol from struct dst_ops.<br>
+13) kernel: net: ipv4: create probe timer for tcp PMTU as per RFC4821.<br>
+14) kernel: net: make skb->skb_iif always track skb->dev.<br>
+15) kernel: net: remove protocol from struct dst_ops.<br>
 <br>
 <br>
 <b>TODO:</b><br>
